--- a/app/index.html
+++ b/app/index.html
@@ -13,26 +13,22 @@
 </div>
 <nav class="menu" id="menu">
     <div class="menu__container" id="main-screen__menu">
-        <div class="menu__item"><a href="#">About us</a></div>
-        <div class="menu__item"><a href="#">Work</a></div>
-        <div class="menu__item"><a href="#">
+        <div class="menu__item"><a href="#" class="menu__link">About us</a></div>
+        <div class="menu__item"><a href="#" class="menu__link">Work</a></div>
+        <div class="menu__item"><a href="#" class="menu__link">
             <img src="images/logo2.png" alt="">
         </a>
 
         </div>
-        <div class="menu__item"><a href="#">Shop</a></div>
-        <div class="menu__item"><a href="#">Contact</a></div>
+        <div class="menu__item"><a href="#" class="menu__link">Shop</a></div>
+        <div class="menu__item"><a href="#" class="menu__link">Contact</a></div>
     </div>
 </nav>
-<div class="main-screen">
-
-</div>
+<div class="main-screen"></div>
 <main>
     <section class="new-generation">
         <div class="info">
-
-                <img src="images/Icon.png" alt="">
-
+            <img src="images/Icon.png" alt="">
             <h3 class="info__title">A new generation of vintage bike</h3>
             <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -45,26 +41,30 @@
     </section>
     <section class="generation-info">
         <div class="generation-info__items">
-            <div class="image-container" style="background: url('images/bicycle-company.png')">
+            <div class="image-container" style="background-image: url('images/bicycle-company.png')">
                 <img src="images/Logo3.png" alt="">
             </div>
             <div class="item-content">
                 <div class="info">
 
-                        <img src="images/Icon2.png" alt="">
+                    <img src="images/Icon2.png" alt="">
 
                     <h3 class="info__title">Vintage oliva</h3>
-                    <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.
+                    <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                        printer took a galley of type and scrambled it to make a type specimen book. It has survived.
                     </p>
                 </div>
-                <img src="images/Layer11.png" alt="">
+
+                <div class="image-container"
+                     style="background-image: url('images/Layer11.png');width: 100%"></div>
             </div>
         </div>
         <div class="generation-info__items">
             <div class="item-content">
                 <div class="info">
 
-                        <img src="images/Icon5.png" alt="">
+                    <img src="images/Icon5.png" alt="">
 
                     <h3 class="info__title">La boriosa</h3>
                     <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -75,20 +75,21 @@
                         essentially unchanged.
                     </p>
                 </div>
-                <img src="images/Layer13.png" alt="">
+                <div class="image-container" style="background-image: url('images/Layer13.png');width: 100%">
+                </div>
             </div>
-            <div class="image-container" style="background: url('images/Layer12.png')">
+            <div class="image-container" style="background-image: url('images/Layer12.png')">
                 <img src="images/Logo4.png" alt="">
             </div>
         </div>
         <div class="generation-info__items">
-            <div class="image-container" style="background: url('images/Layer15.png')">
+            <div class="image-container" style="background-image: url('images/Layer15.png')">
                 <img src="images/Logo6.png" alt="">
             </div>
             <div class="item-content">
                 <div class="info">
 
-                        <img src="images/Icon7.png" alt="">
+                    <img src="images/Icon7.png" alt="">
 
                     <h3 class="info__title">retrò Bike - M. Hulot</h3>
                     <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -99,17 +100,17 @@
                         essentially unchanged.
                     </p>
                 </div>
-
-                <img src="images/Layer16.png" alt="">
+                <div class="image-container" style="background-image: url('images/Layer16.png');width: 100%">
+                </div>
             </div>
-            <div class="image-container" style="content:'';background: url('images/Layer14.png')">
+            <div class="image-container" style="background-image: url('images/Layer14.png')">
             </div>
         </div>
     </section>
     <section class="contact">
         <div class="info">
 
-                <img src="images/twitterSlider.png" alt="">
+            <img src="images/twitterSlider.png" alt="">
 
             <h3 class="info__title">AOD New York @aod <span class="time">/ 35 min</span></h3>
             <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
@@ -120,7 +121,7 @@
         </div>
         <div class="info">
 
-                <img src="images/twitterSlider.png" alt="">
+            <img src="images/twitterSlider.png" alt="">
 
             <h3 class="info__title">AOD New York @aod <<span class="time">/ 35 min</span></h3>
             <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
@@ -131,7 +132,7 @@
         </div>
         <div class="info">
 
-                <img src="images/twitterSlider.png" alt="">
+            <img src="images/twitterSlider.png" alt="">
 
             <h3 class="info__title">AOD New York @aod <span class="info__title__time">/ 35 min</span></h3>
             <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
@@ -145,8 +146,8 @@
         <div class="gallery__items">
             <div class="item">
                 <div class="item--hover"
-                     style="background: url('images/Layer19.png'); background-repeat: no-repeat; background-size: cover;">
-                    <a href="#">
+                     style="background-image: url('images/Layer19.png');">
+                    <a href="#" class="item--hover__link">
                         <img src="images/shopnow.png" alt="">
                         <div>
                             Shop now
@@ -154,8 +155,8 @@
                     </a>
                 </div>
                 <div class="item--hover"
-                     style="background: url('images/Layer21.png'); background-repeat: no-repeat; background-size: cover;">
-                    <a href="#">
+                     style="background-image: url('images/Layer21.png');">
+                    <a href="#" class="item--hover__link">
                         <img src="images/shopnow.png" alt="">
                         <div>
                             Shop now
@@ -164,8 +165,8 @@
                 </div>
             </div>
             <div class="item--hover"
-                 style="background: url('images/Layer20.png'); background-repeat: no-repeat; background-size: cover;">
-                <a href="#">
+                 style="background-image: url('images/Layer20.png');">
+                <a href="#" class="item--hover__link">
                     <img src="images/shopnow.png" alt="">
                     <div>
                         Shop now
@@ -176,8 +177,8 @@
         <div class="gallery__items">
             <div class="item">
                 <div class="item--hover"
-                     style="background: url('images/Layer22.png'); background-repeat: no-repeat; height: 534px; background-size: cover;">
-                    <a href="#">
+                     style="background-image: url('images/Layer22.png'); height: 534px;">
+                    <a href="#" class="item--hover__link">
                         <img src="images/shopnow.png" alt="">
                         <div>
                             Shop now
@@ -185,8 +186,8 @@
                     </a>
                 </div>
                 <div class="item--hover"
-                     style="background: url('images/Layer25.png'); background-repeat: no-repeat; background-size: cover; height: 534px;">
-                    <a href="#">
+                     style="background-image: url('images/Layer25.png');height: 534px;">
+                    <a href="#" class="item--hover__link">
                         <img src="images/shopnow.png" alt="">
                         <div>
                             Shop now
@@ -197,8 +198,8 @@
         </div>
         <div class="gallery__items">
             <div class="item--hover"
-                 style="background: url('images/Layer20.png'); background-repeat: no-repeat; background-size: cover;">
-                <a href="#">
+                 style="background-image: url('images/Layer20.png');">
+                <a href="#" class="item--hover__link">
                     <img src="images/shopnow.png" alt="">
                     <div>
                         Shop now
@@ -207,8 +208,8 @@
             </div>
             <div class="item">
                 <div class="item--hover"
-                     style="background: url('images/Layer19.png'); background-repeat: no-repeat; background-size: cover;">
-                    <a href="#">
+                     style="background-image: url('images/Layer19.png');">
+                    <a href="#" class="item--hover__link">
                         <img src="images/shopnow.png" alt="">
                         <div>
                             Shop now
@@ -216,8 +217,8 @@
                     </a>
                 </div>
                 <div class="item--hover"
-                     style="background: url('images/Layer21.png'); background-repeat: no-repeat; background-size: cover;">
-                    <a href="#">
+                     style="background-image: url('images/Layer21.png'); ">
+                    <a href="#" class="item--hover__link">
                         <img src="images/shopnow.png" alt="">
                         <div>
                             Shop now
@@ -234,7 +235,7 @@
     </section>
     <section class="contact-with-us">
         <img src="images/logo2.png" alt="">
-      <div class="contact-with-us__title">Stay on the saddle!</div>
+        <div class="contact-with-us__title">Stay on the saddle!</div>
         <div class="contact-with-us__input-section">
             <input type="email" placeholder="enter your email...">
             <button type="submit">GO</button>
@@ -243,18 +244,22 @@
 </main>
 <footer class="footer">
     <div class="footer__item address">
-        <div class="company">AOD New York</div>
-        <div class="street">2250 Lexington Avenue</div>
-        <div class="city"><i>New York, NY 10035 - <a href="mailto:#">info@domain.com</a></i></div>
+        <div class="address__company">AOD New York</div>
+        <div class="address__street">2250 Lexington Avenue</div>
+        <div class="address__city"><i>New York, NY 10035 - <a href="mailto:#" class="address__link">info@domain.com</a></i>
+        </div>
     </div>
     <div class="footer__item social-icons">
-        <div class="social-icons__container"><a href="#"> <img src="images/twitter.png" alt=""></a></div>
-        <div class="social-icons__container"><a href="#"><img src="images/facebook.png" alt=""></a></div>
-        <div class="social-icons__container"><a href="#"><img src="images/pinterest.png" alt=""></a></div>
+        <div class="social-icons__container"><a href="#" class="social-icons__link">
+            <img src="images/twitter.png" alt=""></a></div>
+        <div class="social-icons__container"><a href="#" class="social-icons__link">
+            <img src="images/facebook.png" alt=""></a></div>
+        <div class="social-icons__container"><a href="#" class="social-icons__link">
+            <img src="images/pinterest.png" alt=""></a></div>
     </div>
     <div class="footer__item author">
-        <div class="author__by">Handcrafted by </div>
-        <a href="#"> <img src="images/Y%20E%20B%20O%20Logo.png" alt=""></a>
+        <div class="author__by">Handcrafted by</div>
+        <a href="#" class="author__link"> <img src="images/Y%20E%20B%20O%20Logo.png" alt=""></a>
     </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js "></script>
