--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="hamburg-menu">
-    <div href="#" class="burger-nav"></div>
+    <div class="burger-nav"></div>
 </div>
 <nav class="menu" id="menu">
     <div class="menu__container" id="main-screen__menu">
@@ -18,7 +18,6 @@
         <div class="menu__item"><a href="#" class="menu__link">
             <img src="images/logo2.png" alt="">
         </a>
-
         </div>
         <div class="menu__item"><a href="#" class="menu__link">Shop</a></div>
         <div class="menu__item"><a href="#" class="menu__link">Contact</a></div>
@@ -109,9 +108,7 @@
     </section>
     <section class="contact">
         <div class="info">
-
             <img src="images/twitterSlider.png" alt="">
-
             <h3 class="info__title">AOD New York @aod <span class="time">/ 35 min</span></h3>
             <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
                 nulla semper
@@ -120,9 +117,7 @@
             </p>
         </div>
         <div class="info">
-
             <img src="images/twitterSlider.png" alt="">
-
             <h3 class="info__title">AOD New York @aod <<span class="time">/ 35 min</span></h3>
             <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
                 nulla semper
@@ -131,9 +126,7 @@
             </p>
         </div>
         <div class="info">
-
             <img src="images/twitterSlider.png" alt="">
-
             <h3 class="info__title">AOD New York @aod <span class="info__title__time">/ 35 min</span></h3>
             <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
                 nulla semper
@@ -263,11 +256,7 @@
     </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js "></script>
-<script src="https://code.jquery.com/jquery-migrate-3.0.1.js"></script>
-<!--Slider-->
 <script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
-<!--Slider end-->
-
 <script src="js/index.js"></script>
 </body>
 </html>
