--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 <section class="new-generation">
 
     <div class="info">
-        <img src="images/Icon.png" alt="">
+        <img src="images/Icon.png" alt="" style="width: 52px;height: 42px;">
         <h3 class="info__title">A new generation of vintage bike</h3>
         <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -41,11 +41,11 @@
     <div class="generation-info__items">
         <div class="image-container"
              style="background-image: url('images/bicycle-company.png')">
-            <img src="images/Logo3.png" alt="">
+            <img src="images/Logo3.png" alt="" style="width: 113px; height: 118px;">
         </div>
         <div class="generation-info__items__item-content">
             <div class="info">
-                <img src="images/Icon2.png" alt="">
+                <img src="images/Icon2.png" alt="" style="width: 41px;height: 30px;">
                 <h3 class="info__title">Vintage oliva</h3>
                 <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
@@ -59,37 +59,31 @@
     <div class="generation-info__items">
         <div class="generation-info__items__item-content">
             <div class="info">
-                <img src="images/Icon5.png" alt="">
+                <img src="images/Icon5.png" alt="" style="width: 32px;height: 32px;">
                 <h3 class="info__title">La boriosa</h3>
-                <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    It has survived not only five centuries, but also the leap into electronic typesetting,
-                    remaining
-                    essentially unchanged.
+                <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                    Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
+                    a galley of type and scrambled it to make a type specimen book. It has survived.
                 </p>
             </div>
             <div class="image-container" style="background-image: url('images/Layer13.png');width: 100%">
             </div>
         </div>
         <div class="image-container" style="background-image: url('images/Layer12.png')">
-            <img src="images/Logo4.png" alt="">
+            <img src="images/Logo4.png" alt="" style="width: 177px;height: 152px;">
         </div>
     </div>
     <div class="generation-info__items">
         <div class="image-container" style="background-image: url('images/Layer15.png')">
-            <img src="images/Logo6.png" alt="">
+            <img src="images/Logo6.png" alt="" style="width: 208px;height: 67px;">
         </div>
         <div class="generation-info__items__item-content">
             <div class="info">
                 <img src="images/Icon7.png" alt="">
                 <h3 class="info__title">retrò Bike - M. Hulot</h3>
-                <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    It has survived not only five centuries, but also the leap into electronic typesetting,
-                    remaining
-                    essentially unchanged.
+                <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                    Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
+                    a galley of type and scrambled it to make a type specimen book. It has survived.
                 </p>
             </div>
             <div class="image-container" style="background-image: url('images/Layer16.png');width: 100%">
@@ -111,7 +105,7 @@
     </div>
     <div class="info">
         <img src="images/twitterSlider.png" alt="">
-        <h3 class="info__title">AOD New York @aod <<span class="time">/ 35 min</span></h3>
+        <h3 class="info__title">AOD New York @aod <span class="time">/ 35 min</span></h3>
         <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
             nulla semper
             rhoncus. Nullam a
@@ -222,7 +216,7 @@
     <button class="discover__button">Discover the shop</button>
 </section>
 <section class="contact-with-us">
-    <img src="images/logo2.png" alt="">
+    <img src="images/logo2.png" alt="" style="width: 94px;height: 85px;">
     <div class="contact-with-us__title">Stay on the saddle!</div>
     <div class="contact-with-us__input-section">
         <input type="email" placeholder="enter your email...">
