--- a/app/index.html
+++ b/app/index.html
@@ -12,21 +12,19 @@
     <div class="burger-nav"></div>
 </div>
 <nav class="menu" id="menu">
-    <div class="menu__item"><a href="#" class="menu__link">About us</a></div>
-    <div class="menu__item"><a href="#" class="menu__link">Work</a></div>
-    <div class="menu__item"><a href="#" class="menu__link">
-        <img src="images/logo2.png" alt="">
+    <a href="#" class="menu__link">About us</a>
+    <a href="#" class="menu__link">Work</a>
+    <a href="#" class="menu__link">
+        <img src="images/logo2.png" alt="" class="menu__link__logo">
     </a>
-    </div>
-    <div class="menu__item"><a href="#" class="menu__link">Shop</a></div>
-    <div class="menu__item"><a href="#" class="menu__link">Contact</a></div>
+    <a href="#" class="menu__link">Shop</a>
+    <a href="#" class="menu__link">Contact</a>
 </nav>
 
 <div class="main-screen"></div>
 <section class="new-generation">
-
     <div class="info">
-        <img src="images/Icon.png" alt="" style="width: 52px;height: 42px;">
+        <img src="images/Icon.png" alt="" class="info__logo">
         <h3 class="info__title">A new generation of vintage bike</h3>
         <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -35,61 +33,58 @@
             essentially unchanged.
         </p>
     </div>
-
 </section>
 <section class="generation-info">
     <div class="generation-info__items">
-        <div class="image-container"
-             style="background-image: url('images/bicycle-company.png')">
-            <img src="images/Logo3.png" alt="" style="width: 113px; height: 118px;">
+        <div class="image-container">
+            <img src="images/Logo3.png" alt="" class="image-container__logo">
         </div>
         <div class="generation-info__items__item-content">
             <div class="info">
-                <img src="images/Icon2.png" alt="" style="width: 41px;height: 30px;">
+                <img src="images/Icon2.png" alt="" class="info__logo">
                 <h3 class="info__title">Vintage oliva</h3>
                 <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
                     printer took a galley of type and scrambled it to make a type specimen book. It has survived.
                 </p>
             </div>
-            <div class="image-container"
-                 style="background-image: url('images/Layer11.png');width: 100%"></div>
+            <div class="image-container"></div>
         </div>
     </div>
     <div class="generation-info__items">
         <div class="generation-info__items__item-content">
             <div class="info">
-                <img src="images/Icon5.png" alt="" style="width: 32px;height: 32px;">
+                <img src="images/Icon5.png" alt="" class="info__logo">
                 <h3 class="info__title">La boriosa</h3>
                 <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                     Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
                     a galley of type and scrambled it to make a type specimen book. It has survived.
                 </p>
             </div>
-            <div class="image-container" style="background-image: url('images/Layer13.png');width: 100%">
+            <div class="image-container">
             </div>
         </div>
-        <div class="image-container" style="background-image: url('images/Layer12.png')">
-            <img src="images/Logo4.png" alt="" style="width: 177px;height: 152px;">
+        <div class="image-container">
+            <img src="images/Logo4.png" alt="" class="image-container__logo">
         </div>
     </div>
     <div class="generation-info__items">
-        <div class="image-container" style="background-image: url('images/Layer15.png')">
-            <img src="images/Logo6.png" alt="" style="width: 208px;height: 67px;">
+        <div class="image-container">
+            <img src="images/Logo6.png" alt="" class="image-container__logo">
         </div>
         <div class="generation-info__items__item-content">
             <div class="info">
-                <img src="images/Icon7.png" alt="">
+                <img src="images/Icon7.png" alt="" class="info__logo">
                 <h3 class="info__title">retrò Bike - M. Hulot</h3>
                 <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                    Ipsum has been the industry's standard dummy text ever since the 1500s, when  an unknown printer took
+                    Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
                     a galley of type and scrambled it to make a type specimen book. It has survived.
                 </p>
             </div>
-            <div class="image-container" style="background-image: url('images/Layer16.png');width: 100%">
+            <div class="image-container">
             </div>
         </div>
-        <div class="image-container" style="background-image: url('images/Layer14.png')">
+        <div class="image-container">
         </div>
     </div>
 </section>
@@ -216,7 +211,7 @@
     <button class="discover__button">Discover the shop</button>
 </section>
 <section class="contact-with-us">
-    <img src="images/logo2.png" alt="" style="width: 94px;height: 85px;">
+    <img src="images/logo2.png" alt="" class="contact-with-us__logo">
     <div class="contact-with-us__title">Stay on the saddle!</div>
     <div class="contact-with-us__input-section">
         <input type="email" placeholder="enter your email...">
