--- a/app/index.html
+++ b/app/index.html
@@ -90,7 +90,7 @@
 </section>
 <section class="contact">
     <div class="info">
-        <img src="images/twitterSlider.png" alt="">
+        <img src="images/twitterSlider.png" alt="" class="info__logo">
         <h3 class="info__title">AOD New York @aod <span class="time">/ 35 min</span></h3>
         <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
             nulla semper
@@ -120,8 +120,7 @@
 <section class="gallery">
     <div class="gallery__items">
         <div class="item">
-            <div class="item--hover"
-                 style="background-image: url('images/Layer19.png');">
+            <div class="item--hover">
                 <a href="#" class="item--hover__link">
                     <img src="images/shopnow.png" alt="">
                     <div>
@@ -129,8 +128,7 @@
                     </div>
                 </a>
             </div>
-            <div class="item--hover"
-                 style="background-image: url('images/Layer21.png');">
+            <div class="item--hover">
                 <a href="#" class="item--hover__link">
                     <img src="images/shopnow.png" alt="">
                     <div>
@@ -140,8 +138,7 @@
             </div>
         </div>
         <div class="item">
-            <div class="item--hover"
-                 style="background-image: url('images/Layer20.png');">
+            <div class="item--hover">
                 <a href="#" class="item--hover__link">
                     <img src="images/shopnow.png" alt="">
                     <div>
@@ -153,8 +150,7 @@
     </div>
     <div class="gallery__items">
         <div class="item">
-            <div class="item--hover"
-                 style="background-image: url('images/Layer22.png'); height: 534px;">
+            <div class="item--hover">
                 <a href="#" class="item--hover__link">
                     <img src="images/shopnow.png" alt="">
                     <div>
@@ -162,8 +158,7 @@
                     </div>
                 </a>
             </div>
-            <div class="item--hover"
-                 style="background-image: url('images/Layer25.png');height: 534px;">
+            <div class="item--hover">
                 <a href="#" class="item--hover__link">
                     <img src="images/shopnow.png" alt="">
                     <div>
@@ -175,8 +170,7 @@
     </div>
     <div class="gallery__items">
         <div class="item">
-            <div class="item--hover"
-                 style="background-image: url('images/Layer20.png');">
+            <div class="item--hover">
                 <a href="#" class="item--hover__link">
                     <img src="images/shopnow.png" alt="">
                     <div>
@@ -186,8 +180,7 @@
             </div>
         </div>
         <div class="item">
-            <div class="item--hover"
-                 style="background-image: url('images/Layer19.png');">
+            <div class="item--hover">
                 <a href="#" class="item--hover__link">
                     <img src="images/shopnow.png" alt="">
                     <div>
@@ -195,8 +188,7 @@
                     </div>
                 </a>
             </div>
-            <div class="item--hover"
-                 style="background-image: url('images/Layer21.png'); ">
+            <div class="item--hover">
                 <a href="#" class="item--hover__link">
                     <img src="images/shopnow.png" alt="">
                     <div>
@@ -213,9 +205,9 @@
 <section class="contact-with-us">
     <img src="images/logo2.png" alt="" class="contact-with-us__logo">
     <div class="contact-with-us__title">Stay on the saddle!</div>
-    <div class="contact-with-us__input-section">
-        <input type="email" placeholder="enter your email...">
-        <button type="submit">GO</button>
+    <div class="contact-with-us__container">
+        <input type="email" placeholder="enter your email..." class="contact-with-us__container__input">
+        <button type="submit" class="contact-with-us__container__btn">GO</button>
     </div>
 </section>
 <footer class="footer">
@@ -226,16 +218,21 @@
         </div>
     </div>
     <div class="footer__item social-icons">
-        <div class="social-icons__container"><a href="#" class="social-icons__link">
-            <img src="images/twitter.png" alt=""></a></div>
-        <div class="social-icons__container"><a href="#" class="social-icons__link">
-            <img src="images/facebook.png" alt=""></a></div>
-        <div class="social-icons__container"><a href="#" class="social-icons__link">
-            <img src="images/pinterest.png" alt=""></a></div>
+            <a href="#" class="social-icons__link">
+                <img src="images/twitter.png" alt="" class="social-icons__link__image">
+            </a>
+            <a href="#" class="social-icons__link">
+                <img src="images/facebook.png" alt="" class="social-icons__link__image">
+            </a>
+            <a href="#" class="social-icons__link">
+                <img src="images/pinterest.png" alt="" class="social-icons__link__image">
+            </a>
     </div>
     <div class="footer__item author">
         <div class="author__by">Handcrafted by</div>
-        <a href="#" class="author__link"> <img src="images/Y%20E%20B%20O%20Logo.png" alt=""></a>
+        <a href="#" class="author__link">
+            <img src="images/Y%20E%20B%20O%20Logo.png" alt="" class="author__link__image">
+        </a>
     </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js "></script>
