--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <a href="#" class="menu__link">About us</a>
     <a href="#" class="menu__link">Work</a>
     <a href="#" class="menu__link">
-        <img src="images/logo2.png" alt="" class="menu__link__logo">
+        <img src="images/Logo2.png" alt="" class="menu__link__logo">
     </a>
     <a href="#" class="menu__link">Shop</a>
     <a href="#" class="menu__link">Contact</a>
@@ -90,7 +90,7 @@
 </section>
 <section class="contact">
     <div class="info">
-        <img src="images/twitterSlider.png" alt="" class="info__logo">
+        <img src="images/TwitterSlider.png" alt="" class="info__logo">
         <h3 class="info__title">AOD New York @aod <span class="time">/ 35 min</span></h3>
         <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
             nulla semper
@@ -99,7 +99,7 @@
         </p>
     </div>
     <div class="info">
-        <img src="images/twitterSlider.png" alt="">
+        <img src="images/TwitterSlider.png" alt="">
         <h3 class="info__title">AOD New York @aod <span class="time">/ 35 min</span></h3>
         <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
             nulla semper
@@ -108,7 +108,7 @@
         </p>
     </div>
     <div class="info">
-        <img src="images/twitterSlider.png" alt="">
+        <img src="images/TwitterSlider.png" alt="">
         <h3 class="info__title">AOD New York @aod <span class="info__title__time">/ 35 min</span></h3>
         <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
             nulla semper
@@ -122,7 +122,7 @@
         <div class="item">
             <div class="item--hover">
                 <a href="#" class="item--hover__link">
-                    <img src="images/shopnow.png" alt="">
+                    <img src="images/Shopnow.png" alt="">
                     <div>
                         Shop now
                     </div>
@@ -130,7 +130,7 @@
             </div>
             <div class="item--hover">
                 <a href="#" class="item--hover__link">
-                    <img src="images/shopnow.png" alt="">
+                    <img src="images/Shopnow.png" alt="">
                     <div>
                         Shop now
                     </div>
@@ -140,27 +140,7 @@
         <div class="item">
             <div class="item--hover">
                 <a href="#" class="item--hover__link">
-                    <img src="images/shopnow.png" alt="">
-                    <div>
-                        Shop now
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="gallery__items">
-        <div class="item">
-            <div class="item--hover">
-                <a href="#" class="item--hover__link">
-                    <img src="images/shopnow.png" alt="">
-                    <div>
-                        Shop now
-                    </div>
-                </a>
-            </div>
-            <div class="item--hover">
-                <a href="#" class="item--hover__link">
-                    <img src="images/shopnow.png" alt="">
+                    <img src="images/Shopnow.png" alt="">
                     <div>
                         Shop now
                     </div>
@@ -172,7 +152,27 @@
         <div class="item">
             <div class="item--hover">
                 <a href="#" class="item--hover__link">
-                    <img src="images/shopnow.png" alt="">
+                    <img src="images/Shopnow.png" alt="">
+                    <div>
+                        Shop now
+                    </div>
+                </a>
+            </div>
+            <div class="item--hover">
+                <a href="#" class="item--hover__link">
+                    <img src="images/Shopnow.png" alt="">
+                    <div>
+                        Shop now
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="gallery__items">
+        <div class="item">
+            <div class="item--hover">
+                <a href="#" class="item--hover__link">
+                    <img src="images/Shopnow.png" alt="">
                     <div>
                         Shop now
                     </div>
@@ -182,7 +182,7 @@
         <div class="item">
             <div class="item--hover">
                 <a href="#" class="item--hover__link">
-                    <img src="images/shopnow.png" alt="">
+                    <img src="images/Shopnow.png" alt="">
                     <div>
                         Shop now
                     </div>
@@ -190,7 +190,7 @@
             </div>
             <div class="item--hover">
                 <a href="#" class="item--hover__link">
-                    <img src="images/shopnow.png" alt="">
+                    <img src="images/Shopnow.png" alt="">
                     <div>
                         Shop now
                     </div>
@@ -203,7 +203,7 @@
     <button class="discover__button">Discover the shop</button>
 </section>
 <section class="contact-with-us">
-    <img src="images/logo2.png" alt="" class="contact-with-us__logo">
+    <img src="images/Logo2.png" alt="" class="contact-with-us__logo">
     <div class="contact-with-us__title">Stay on the saddle!</div>
     <div class="contact-with-us__container">
         <input type="email" placeholder="enter your email..." class="contact-with-us__container__input">
@@ -219,19 +219,19 @@
     </div>
     <div class="footer__item social-icons">
             <a href="#" class="social-icons__link">
-                <img src="images/twitter.png" alt="" class="social-icons__link__image">
+                <img src="images/Twitter.png" alt="" class="social-icons__link__image">
             </a>
             <a href="#" class="social-icons__link">
-                <img src="images/facebook.png" alt="" class="social-icons__link__image">
+                <img src="images/Facebook.png" alt="" class="social-icons__link__image">
             </a>
             <a href="#" class="social-icons__link">
-                <img src="images/pinterest.png" alt="" class="social-icons__link__image">
+                <img src="images/Pinterest.png" alt="" class="social-icons__link__image">
             </a>
     </div>
     <div class="footer__item author">
         <div class="author__by">Handcrafted by</div>
         <a href="#" class="author__link">
-            <img src="images/Y%20E%20B%20O%20Logo.png" alt="" class="author__link__image">
+            <img src="images/YeboLogo.png" alt="" class="author__link__image">
         </a>
     </div>
 </footer>
