--- a/app/index.html
+++ b/app/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 <div class="hamburg-menu">
-    <div class="burger-nav"></div>
+    <div class="hamburg-menu__burger-nav"></div>
 </div>
 <nav class="menu" id="menu">
     <a href="#" class="menu__link">About us</a>
     <a href="#" class="menu__link">Work</a>
     <a href="#" class="menu__link">
-        <img src="images/Logo2.png" alt="" class="menu__link__logo">
+        <img src="images/Logo2.png" alt="" class="menu__i-logo">
     </a>
     <a href="#" class="menu__link">Shop</a>
     <a href="#" class="menu__link">Contact</a>
