--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 
 <div class="main-screen"></div>
 <section class="new-generation">
-    <div class="info">
+    <div class="info new-generation__info">
         <img src="images/Icon.png" alt="" class="info__logo">
         <h3 class="info__title">A new generation of vintage bike</h3>
         <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -39,11 +39,11 @@
         <div class="image-container">
             <img src="images/Logo3.png" alt="" class="image-container__logo">
         </div>
-        <div class="generation-info__items__item-content">
-            <div class="info">
+        <div class="generation-info__item">
+            <div class="info generation-info__item-info">
                 <img src="images/Icon2.png" alt="" class="info__logo">
-                <h3 class="info__title">Vintage oliva</h3>
-                <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                <h3 class="info__title generation-info__item-title">Vintage oliva</h3>
+                <p class="info__text generation-info__item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
                     printer took a galley of type and scrambled it to make a type specimen book. It has survived.
                 </p>
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="generation-info__items">
-        <div class="generation-info__items__item-content">
+        <div class="generation-info__item">
             <div class="info">
                 <img src="images/Icon5.png" alt="" class="info__logo">
                 <h3 class="info__title">La boriosa</h3>
@@ -72,7 +72,7 @@
         <div class="image-container">
             <img src="images/Logo6.png" alt="" class="image-container__logo">
         </div>
-        <div class="generation-info__items__item-content">
+        <div class="generation-info__item">
             <div class="info">
                 <img src="images/Icon7.png" alt="" class="info__logo">
                 <h3 class="info__title">retrò Bike - M. Hulot</h3>
@@ -218,15 +218,15 @@
         </div>
     </div>
     <div class="footer__item social-icons">
-            <a href="#" class="social-icons__link">
-                <img src="images/Twitter.png" alt="" class="social-icons__link__image">
-            </a>
-            <a href="#" class="social-icons__link">
-                <img src="images/Facebook.png" alt="" class="social-icons__link__image">
-            </a>
-            <a href="#" class="social-icons__link">
-                <img src="images/Pinterest.png" alt="" class="social-icons__link__image">
-            </a>
+        <a href="#" class="social-icons__link">
+            <img src="images/Twitter.png" alt="" class="social-icons__link__image">
+        </a>
+        <a href="#" class="social-icons__link">
+            <img src="images/Facebook.png" alt="" class="social-icons__link__image">
+        </a>
+        <a href="#" class="social-icons__link">
+            <img src="images/Pinterest.png" alt="" class="social-icons__link__image">
+        </a>
     </div>
     <div class="footer__item author">
         <div class="author__by">Handcrafted by</div>
